href property of a Link attribute is an URI not an URL